--- a/index.html
+++ b/index.html
@@ -44,6 +44,18 @@
             <p>Leme Search offered in: <a href="#main_content" id="language">Norsk</a></p>
         </div>
     </div>
+    <div id="footer" class="footer_wrapper">
+        <div class="footer_left">
+            <a href="#">Advertising</a>
+            <a href="#">Business</a>
+            <a href="#">How Search works</a>
+        </div>
+        <div class="footer_right">
+            <a href="#">Privacy</a>
+            <a href="#">Terms</a>
+            <a href="#">Settings</a>
+        </div>
+    </div>
     <script src="./js/main.js"></script>
 </body>
 </html>
